[tool.poetry]
name = "data-transform-uhc"
version = "0.1.0"
description = ""
authors = ["crowBottom <jpcunningham_dev@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
aws-cdk-lib = "^2.51.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
